fix:fixed upgrade bar position (from fixed to sticky), removed margin-top from ul li, wrap to ul

--- a/css/style.css
+++ b/css/style.css
@@ -608,8 +608,9 @@ h4 {
     display: flex;
     justify-content: end;
     align-items: center;
-    position: fixed;
-    width: calc(100% - 250px);
+    position: sticky;
+    top:0;
+    z-index: 9999;
     height: 80px;
     background-color: var(--upgrade-bar-background-color);
 }
@@ -642,6 +643,8 @@ h4 {
 
 /* menu di navigazione dei contenuti */
 .play-list-main ul {
+    display:flex;
+    flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
     list-style: none;
@@ -650,7 +653,7 @@ h4 {
 .play-list-main ul li {
     position: relative;
     color: var(--link-sub-color);
-    margin-top: 100px;
+    padding-top: 20px;
 }
 
 .play-list-main ul a {
@@ -700,6 +703,8 @@ h4 {
     width: calc(100%/6 - 20px);
     margin-top: 20px;
     text-align: center;
+    /* impedisco alle cards di rimpicciolirsi sotto questa dimensione */
+    min-width:105px;
 }
 
 .card h3 {
@@ -770,8 +775,8 @@ h4 {
 }
 
 .left-media img {
-    width: 60px;
-    height: 60px;
+    min-width: 60px;
+    aspect-ratio: 1;
     object-fit: cover;
 }
 
@@ -855,6 +860,10 @@ h4 {
     gap: 20px;
     width: 60%;
     padding-bottom: 5px;
+}
+
+.center-media-wrapper .progress-bar {
+    min-width: 400px;
 }
 
 .progress-bar span {
